# aer-ifs

./: .gitignore  README.html  README.md  pyproject.toml
aer_ifs/: main.py  utils.py
aer_ifs/config/: aerosol_ifs_49R1_20230725.nc  species_column.json
aer_ifs/io/: apro.py  ifs.py
lr_ifs/: main.py  utils.py
lr_ifs/config/: aerosol_properties.json  aerosol_properties.json.bak  species_column.json
lr_ifs/io/: apro.py  ifs.py
