[project]
name = "aer-ifs"
version = "0.8.0"
description = "Lidar Ratio computation from ECMWF IFS model data"
authors = [
  {name = "Augustin Mortier", email = "augustinm@met.no"},
]
readme = "README.md"
requires-python = ">=3.10,<4.0"


dependencies = [
    "xarray ~= 2024.9",
    "typer ~= 0.12.5",
    "netcdf4 ~= 1.7",
    "matplotlib ~= 3.9",
    "dask ~= 2024.9",
    "rich ~= 13.8",
    "scipy ~= 1.14",
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
cartopy = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
aer-ifs = "aer_ifs.main:app"